--- a/web1/src/app/admin/employee/employee.component.html
+++ b/web1/src/app/admin/employee/employee.component.html
@@ -129,6 +129,12 @@
                                                 Permission After The Bill
                                             </mat-slide-toggle>
                                         </div>
+                                        <div class="col-md-4 col-sm-6 col-6 ">
+                                            <mat-slide-toggle type="ratio" name="SalePermission" color="primary"
+                                                [(ngModel)]="data.SalePermission" class="example-margin">Sale Price Change
+                                                Permission 
+                                            </mat-slide-toggle>
+                                        </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
