--- a/web1/src/app/sale/bill-list/bill-list.component.css
+++ b/web1/src/app/sale/bill-list/bill-list.component.css
@@ -191,3 +191,39 @@ input[type="date"] {
   color: white;
 }
 
+
+
+
+.button-container {
+  position: relative;
+  display: inline-block;
+}
+
+.hover-box {
+  position: absolute;
+  top: 50%;
+  left: 120%;
+  background-color: #ffffff;
+  border: 2px solid #393497e8;
+  border-radius: 5px;
+  padding: 7px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  width: 600px;
+  height: 130px;
+  display: none;
+  z-index: 1;
+  /* Ensure the box appears above other elements */
+  color: #333;
+  margin-left: 0px;
+}
+
+.button-container:hover .hover-box {
+  display: block;
+  /* Show the box when the button-container is hovered */
+}
+
+#table2 th,
+#table2 td {
+  border: solid 1px;
+
+}
