--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -536,7 +536,7 @@
               <!-- You've Saved  end -->
 
               <section style="width: 100%; padding: 0; margin: 0;">
-                <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0;">ShopTiming:- <%= data.shopdetails.ShopTiming %>  </h4>   
+                <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0;">Timing:- <%= data.shopdetails.ShopTiming %>  </h4>   
               </section>
             </section>
 
