--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -31,7 +31,8 @@
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>InvoiceDate</mat-label>
-                        <input matInput name="BillDate" type="date" [(ngModel)]="BillMaster.BillDate">
+                        <input matInput name="BillDate" type="date" [(ngModel)]="BillMaster.BillDate" 
+                        [disabled]="!this.billDateDisabled" >
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0">
